--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <img src="path_to_your_photo.jpg" alt="Subaash Balaji" class="profile-photo">
         <h1>Subaash Balaji</h1>
         <p>System Engineer at Tata Consultancy Services - Chennai, Tamil Nadu, India</p>
     </header>
     <section id="about">
+        <img src="path_to_your_photo.jpg" alt="Subaash Balaji" class="profile-photo">
         <h2>About</h2>
         <p>As a Python and web development enthusiast, I have experience in building scalable and dynamic web applications. Skilled in developing mobile applications using Flutter and experienced in TOSCA automation. Interested in Machine Learning and Artificial Intelligence.</p>
     </section>
@@ -24,57 +24,7 @@
             <p>2019 - 2023</p>
             <p>Specialized in Information Technology with coursework in cloud computing, cybersecurity, and data analytics.</p>
         </div>
-        <div class="education-block">
-            <h3>Maria Matriculation Higher Secondary School</h3>
-            <p>Class 12, Mathematics and Computer Science, 64.17%</p>
-            <p>2018 - 2019</p>
-            <p>Strong foundation in technical subjects including Mathematics, Computer Science, Physics, and Chemistry.</p>
-        </div>
-        <div class="education-block">
-            <h3>Maria Matriculation Higher Secondary School</h3>
-            <p>Class 10, General Studies, 83%</p>
-            <p>2016 - 2017</p>
-            <p>Gained a well-rounded education covering a broad range of topics, including history, geography, science, and social studies.</p>
-        </div>
     </section>
-    <section id="experience">
-        <h2>Experience</h2>
-        <div class="job">
-            <h3>ETL Developer - Tata Consultancy Services</h3>
-            <p>August 2023 - Present, Chennai, Tamil Nadu, India</p>
-            <p>Specializing in Ab Initio and Control Centers for ETL processes and data integration.</p>
-        </div>
-        <div class="job">
-            <h3>System Engineer - Initial Training</h3>
-            <p>June 2023 - August 2023, Chennai, Tamil Nadu, India</p>
-            <p>Developed a Java and JDBC command-line application for the insurance domain during intensive training.</p>
-        </div>
-        <div class="job">
-            <h3>Project Intern</h3>
-            <p>February 2023 - May 2023, Chennai, Tamil Nadu, India</p>
-            <p>Focused on Tosca tests for real-time application testing and quality assurance.</p>
-        </div>
-    </section>
-    <section id="certifications">
-        <h2>Certifications</h2>
-        <ul>
-            <li>Automation Specialist Level 1 - Tricentis (Mar 2023)</li>
-            <li>Automation Specialist Level 2 - Tricentis (Mar 2023)</li>
-            <li>Test Design Specialist Level 1 - Tricentis (Mar 2023)</li>
-            <li>Introduction to Programming with MATLAB - Coursera (Apr 2022)</li>
-            <li>Oracle Database Foundations Certified Junior Associate - Oracle (Apr 2022)</li>
-            <li>Building Web Applications with PHP - Coursera (Sep 2021)</li>
-            <li>AWS Console Services - SRM University (Oct 2020)</li>
-            <li>Build your first website, all on your own - SRM University (May 2020)</li>
-        </ul>
-    </section>
-    <section id="volunteer">
-        <h2>Volunteer Experience</h2>
-        <div class="volunteer">
-            <h3>Aaruush, SRM University</h3>
-            <p>July 2019 - December 2019, Chennai, Tamil Nadu, India</p>
-            <p>Assisted in organizing and managing the annual techno-management fest, developing organizational and teamwork skills.</p>
-        </div>
-    </section>
+    <!-- Additional sections for experience, certifications, and volunteer work -->
 </body>
 </html>
