--- a/index.html
+++ b/index.html
@@ -5,26 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subaash Balaji's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#volunteer">Volunteer</a></li>
+            </ul>
+        </nav>
         <h1>Subaash Balaji</h1>
         <p>System Engineer at Tata Consultancy Services - Chennai, Tamil Nadu, India</p>
     </header>
-    <section id="about">
-        <img src="path_to_your_photo.jpg" alt="Subaash Balaji" class="profile-photo">
-        <h2>About</h2>
-        <p>As a Python and web development enthusiast, I have experience in building scalable and dynamic web applications. Skilled in developing mobile applications using Flutter and experienced in TOSCA automation. Interested in Machine Learning and Artificial Intelligence.</p>
-    </section>
-    <section id="education">
-        <h2>Education</h2>
-        <div class="education-block">
-            <h3>SRM University</h3>
-            <p>Bachelor of Technology - BTech, Computer Engineering, 85.9%</p>
-            <p>2019 - 2023</p>
-            <p>Specialized in Information Technology with coursework in cloud computing, cybersecurity, and data analytics.</p>
-        </div>
-    </section>
-    <!-- Additional sections for experience, certifications, and volunteer work -->
+    <main>
+        <section id="about">
+            <img src="path_to_your_photo.jpg" alt="Subaash Balaji" class="profile-photo">
+            <h2>About</h2>
+            <p>As a Python and web development enthusiast, I have experience in building scalable and dynamic web applications. Skilled in developing mobile applications using Flutter and experienced in TOSCA automation. Interested in Machine Learning and Artificial Intelligence.</p>
+        </section>
+        <section id="education">
+            <h2>Education</h2>
+            <div class="education-block">
+                <h3>SRM University</h3>
+                <p>Bachelor of Technology - BTech, Computer Engineering, 85.9%</p>
+                <p>2019 - 2023</p>
+                <p>Specialized in Information Technology with coursework in cloud computing, cybersecurity, and data analytics.</p>
+            </div>
+        </section>
+        <section id="experience">
+            <h2>Experience</h2>
+            <div class="experience-block">
+                <h3>ETL Developer</h3>
+                <p>Tata Consultancy Services, August 2023 - Present</p>
+                <p>Specializing in Ab Initio and Control Centers for ETL processes and data integration.</p>
+            </div>
+        </section>
+        <section id="certifications">
+            <h2>Certifications</h2>
+            <ul>
+                <li>Automation Specialist Level 1 - Tricentis</li>
+                <li>Automation Specialist Level 2 - Tricentis</li>
+                <li>Test Design Specialist Level 1 - Tricentis</li>
+            </ul>
+        </section>
+        <section id="volunteer">
+            <h2>Volunteer Experience</h2>
+            <div class="volunteer-block">
+                <h3>Aaruush, SRM University</h3>
+                <p>Assisted in organizing and managing the annual techno-management fest, developing organizational and teamwork skills.</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
