--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
             </div>
         </section>
     </main>
+    <a href="login.html" class="login-button">Go to Login</a>
 </body>
 </html>
